--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.thymeleaf.prefix=file:src/main/resources/templates/
 spring.datasource.data-source-class-name=org.h2.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/import_app
-spring.datasource.username=""
-spring.datasource.password=""
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/import_app
+spring.datasource.username=user
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.servlet.multipart.enabled=true
