--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.8'
 	id 'io.spring.dependency-management' version '1.1.3'
+	id 'org.flywaydb.flyway' version '7.15.0'
 }
 
 group = 'importApp'
@@ -28,11 +29,22 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	compileOnly 'org.projectlombok:lombok:1.18.26'
 	annotationProcessor 'org.projectlombok:lombok:1.18.26'
-	implementation 'mysql:mysql-connector-java:8.0.26' // バージョンは適宜変更}
+	implementation 'mysql:mysql-connector-java:8.0.33' // バージョンは適宜変更}
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
+	implementation 'org.flywaydb:flyway-core:7.15.0'
+	runtimeOnly 'mysql:mysql-connector-java:8.0.33' // MySQL 8.x 用のドライバー
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+flyway {
+	url = 'jdbc:mysql://localhost:3306/importApp'
+	user = 'root'
+	password = 'rootpassword'
+	driver = 'com.mysql.cj.jdbc.Driver'
+	locations = ['classpath:db/migration']
+	validateOnMigrate = false
 }
