--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,9 @@ spring:
     locations: classpath:db/migration
     baseline-on-migrate: true
     baseline-version: 1
+
+  mybatis:
+    mapper-locations: classpath:Mapper/*.xml
+    type-aliases-package: importApp.Entity
+    configuration:
+      map-underscore-to-camel-case: true
