--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
 env:
-  HOST: localhost
+  HOST: db
   DATABASE: importApp
   USER: ${{ secrets.DOCKER_USERNAME }}
   PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
@@ -21,7 +21,7 @@ jobs:
         image: mysql:8
         env:
           MYSQL_ROOT_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          MYSQL_DATABASE: ${{ secrets.DOCKER_USERNAME }}
+          MYSQL_DATABASE: importApp
         ports:
           - 3306:3306
 
