--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       db:
         image: mysql:8
         env:
-          MYSQL_ROOT_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          MYSQL_ROOT_PASSWORD: rootpassword
           MYSQL_DATABASE: importApp
         ports:
           - 3306:3306
