token箇所修正（途中）コントローラーの401を一旦解消

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,3 +27,6 @@ spring:
     mapper-locations: classpath:importApp/mapper/*.xml
     configuration:
       map-underscore-to-camel-case: true
+
+jwt:
+  secret: yourSecretKeyHere
