--- a/.github/workflows/test-ssh.yml
+++ b/.github/workflows/test-ssh.yml
@@ -23,4 +23,4 @@ jobs:
     # 3. EC2への接続テスト
     - name: Test SSH Connection
       run: |
-        ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "echo 'SSH connection successful!'"
+        ssh ${{ secrets.USER }}@${{ secrets.HOST }} "echo 'SSH connection successful!'"
