--- a/.github/workflows/test-ssh.yml
+++ b/.github/workflows/test-ssh.yml
@@ -1,26 +1,19 @@
 name: Test SSH Connection to EC2
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: # 手動実行を許可
 
 jobs:
   test-ssh:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. 秘密鍵を設定
-    - name: Set up SSH Key
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.SECRET_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-
-    # 2. ホストキーの確認をスキップ
-    - name: Disable Host Key Checking
-      run: |
-        echo -e "Host *\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-
-    # 3. EC2への接続テスト
-    - name: Test SSH Connection
-      run: |
-        ssh -i ~/.ssh/id_rsa ${{ secrets.USER }}@${{ secrets.HOST }} "echo 'SSH connection successful!'"
+    # 1. SSH接続確認
+    - name: Test SSH Connection with appleboy
+      uses: appleboy/ssh-action@v0.1.5
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SECRET_KEY }}
+        script: |
+          echo "SSH connection successful!"
