--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,18 +40,22 @@ jobs:
         run: ./gradlew assemble -Dspring.profiles.active=prod
 
       # 5. 成果物を転送（rsync）
-      - name: Deploy to EC2 with rsync
-        run: |
-          rsync -avz -e "ssh -o StrictHostKeyChecking=no" \
-            ./build/libs/your-app-name-0.0.1-SNAPSHOT.jar \
-            ec2-user@${{ secrets.HOST }}:/srv/api/your-app-name.jar
+      - name: Deploy with Rsync
+        uses: burnett01/rsync-deployments@5.1
+        with:
+          switches: '-avz --delete --no-time --no-perms --rsync-path="sudo rsync"'
+          path: ./build/libs/*.jar
+          remote_path: /srv/api/
+          remote_host: ${{ secrets.HOST }}
+          remote_user: ${{ secrets.USER }}
+          remote_key: ${{ secrets.SECRET_KEY }}
 
       # 6. EC2でアプリケーションを再起動
       - name: Restart application on EC2
         uses: appleboy/ssh-action@v0.1.5
         with:
           host: ${{ secrets.HOST }}
-          username: ec2-user
+          username: ${{secret.USER}}
           key: ${{ secrets.SECRET_KEY }}
           script: |
             pkill -f 'java -jar' || true
