--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,16 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew assemble -Dspring.profiles.active=prod
 
+      - name: Grant temporary write permissions
+        uses: appleboy/ssh-action@v0.1.5
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SECRET_KEY }}
+          script: | 
+            sudo chmod -R 777 /srv/api
+
+
       # 5. 成果物を転送（rsync）
       - name: Deploy with Rsync
         uses: burnett01/rsync-deployments@5.1
@@ -61,3 +71,13 @@ jobs:
           script: |
             pkill -f 'java -jar' || true
             nohup java -jar /srv/api/sbm-app.jar --spring.profiles.active=prod > /srv/api/app.log 2>&1 &
+
+      - name: Reset permissions
+        uses: appleboy/ssh-action@v0.1.5
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SECRET_KEY }}
+          script: |
+            sudo chmod -R 755 /srv/api
+            sudo chown -R ec2-user:ec2-user /srv/api
