--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,16 +47,15 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SECRET_KEY }}
           script: | 
-            sudo chmod -R 777 /srv/api
-
+            sudo chmod -R 777 /srv/sbm/api
 
       # 5. 成果物を転送（rsync）
       - name: Deploy with Rsync
         uses: burnett01/rsync-deployments@5.1
         with:
           switches: '-avz --delete --rsync-path="sudo rsync"'
-          path: ./build/libs/*.jar
-          remote_path: /srv/api/
+          path: build/libs/*.jar
+          remote_path: /srv/sbm/api/
           remote_host: ${{ secrets.HOST }}
           remote_user: ${{ secrets.USER }}
           remote_key: ${{ secrets.SECRET_KEY }}
