初期データの挿入不要なので削除

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -22,6 +22,9 @@ spring:
     mapper-locations: classpath:importApp/mapper/*.xml
     configuration:
       map-underscore-to-camel-case: true
+  spring:
+    flyway:
+      enabled: false
 
 jwt:
   secret: dummy_jwt_secret
