--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -25,6 +25,8 @@ spring:
   spring:
     flyway:
       enabled: false
+    autoconfigure:
+      exclude: org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration
 
 jwt:
   secret: dummy_jwt_secret
