--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
 	implementation 'org.flywaydb:flyway-core:7.15.0'
-	implementation 'org.apache.poi:poi:4.1.2'
-	implementation 'org.apache.poi:poi-ooxml:4.1.2'
-	compileOnly 'org.projectlombok:lombok:1.18.26'
-	annotationProcessor 'org.projectlombok:lombok:1.18.26'
+	implementation 'org.apache.poi:poi:5.2.3'
+	implementation 'org.apache.poi:poi-ooxml:5.2.3'
+	implementation 'org.apache.poi:poi-ooxml-full:5.2.3'
+	implementation 'org.apache.commons:commons-collections4:4.4'
+	compileOnly 'org.projectlombok:lombok:1.18.28'
+	annotationProcessor 'org.projectlombok:lombok:1.18.28'
 	implementation 'mysql:mysql-connector-java:8.0.33' // バージョンは適宜変更
 	runtimeOnly 'mysql:mysql-connector-java:8.0.33' // MySQL 8.x 用のドライバー
 	implementation 'org.springframework.security:spring-security-core'
