--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,7 @@ jobs:
           sed -i "s/db_dummy_username/${{ secrets.DB_USERNAME }}/g" src/main/resources/application-prod.yml
           sed -i "s/db_dummy_password/${{ secrets.DB_PASSWORD }}/g" src/main/resources/application-prod.yml
           sed -i "s/dummy_jwt_secret/${{ secrets.JWT_SECRET }}/g" src/main/resources/application-prod.yml
+          sed -i "s/dummy_gemini_key/${{ secrets.GEMINI_API_KEY }}/g" src/main/resources/application-prod.yml
 
       # 4. Gradleでビルド
       - name: Build with Gradle
