--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '2.7.8'
 	id 'io.spring.dependency-management' version '1.1.3'
 	id 'org.flywaydb.flyway' version '7.15.0'
+	id 'org.owasp.dependencycheck' version '9.0.9'
 }
 
 group = 'importApp'
@@ -38,6 +39,7 @@ dependencies {
 	implementation 'org.springframework.security:spring-security-crypto'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'org.apache.httpcomponents:httpclient:4.5.14'
 	dependencies {
 		implementation 'org.modelmapper:modelmapper:3.1.0' // 最新版を確認して使用してください
 	}
@@ -65,4 +67,30 @@ bootJar {
 	archiveBaseName.set("sbm-app")  // ベース名を設定
 	archiveVersion.set("")          // バージョンを除外
 	archiveClassifier.set("")       // 分類子を除外
+}
+
+// OWASP Dependency Check設定
+dependencyCheck {
+	format = 'ALL'
+	suppressionFile = 'dependency-check-suppressions.xml'
+	failBuildOnCVSS = 7 // CVSS 7以上で失敗
+	analyzers {
+		// 使用しない解析機能を無効化してパフォーマンス向上
+		assemblyEnabled = false
+		msbuildEnabled = false
+		nuspecEnabled = false
+		nugetconfEnabled = false
+		cocoapodsEnabled = false
+		swiftEnabled = false
+		bundleAuditEnabled = false
+		pyDistributionEnabled = false
+		pyPackageEnabled = false
+		rubygemsEnabled = false
+		opensslEnabled = false
+		cmakeEnabled = false
+		autoconfEnabled = false
+		composerEnabled = false
+		nodeEnabled = false
+		nodeAuditEnabled = false
+	}
 }
