--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -33,3 +33,8 @@ jwt:
 analyzer:
   api:
     base-url: "http://localhost:5000/api/v1"
+
+gemini:
+  api:
+    key: "dummy_local_key_for_testing"
+    url: "https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent"
