--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -30,6 +30,11 @@ spring:
       enabled: true
       max-file-size: 10MB
       max-request-size: 10MB
+  flyway:
+    enable: true
+    location: classpath:db/migration
+    baseline-on-migration: true
+    baseline-version: 1
   mybatis:
     type-aliases-package: importApp.Entity
     mapper-locations: classpath:importApp/mapper/*.xml
