--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -60,7 +60,7 @@ analyzer:
 gemini:
   api:
     key: dummy_gemini_key
-    url: "https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent"
+    url: "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-8b:generateContent"
 
 ai:
   limits:
