--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -56,7 +56,7 @@ analyzer:
 gemini:
   api:
     key: dummy_gemini_key
-    url: "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-8b:generateContent"
+    url: "https://generativelanguage.googleapis.com/v1/models/gemini-2.0-flash-lite:generateContent"
 
 ai:
   limits:
