--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -60,8 +60,7 @@ analyzer:
 gemini:
   api:
     key: dummy_gemini_key
-    url: "https://generativelanguage.googleapis.com/v1/models/gemini-2.0-flash-lite:generateContent"
-
+    url: "https://generativelanguage.googleapis.com/v1/models/gemini-2.5-flash-lite:streamGenerateContent"
 ai:
   limits:
     enabled: ${AI_LIMITS_ENABLED:true}
