--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
 
       # 4. Gradleでビルド
       - name: Build with Gradle
-        run: ./gradlew clean Assemble -Dspring.profiles.active=prod --info
+        run: ./gradlew clean assemble -Dspring.profiles.active=prod
 
       # 5. AWS認証情報の設定（Session Manager用）
       - name: Configure AWS credentials
@@ -103,13 +103,7 @@ jobs:
             --region ${{ secrets.AWS_REGION }} \
             --output text --query "Status")
           
-          # 詳細なログを出力
           echo "Command Status: $STATUS"
-          aws ssm get-command-invocation \
-            --command-id $COMMAND_ID \
-            --instance-id ${{ secrets.EC2_INSTANCE_ID }} \
-            --region ${{ secrets.AWS_REGION }} \
-            --output json
           
           if [ "$STATUS" != "Success" ]; then
             echo "JAR deployment failed with status: $STATUS"
