X-Forwarded-Protoヘッダーを信頼する設定を追加してHSTSを有効化
リバースプロキシ（Nginx）経由でのHTTPS通信を正しく認識するため、
server.forward-headers-strategy=frameworkを追加。

これによりSpring SecurityがX-Forwarded-Protoヘッダーを信頼し、
HSTSヘッダーが正しく送信されるようになる。

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,3 +1,6 @@
+server:
+  forward-headers-strategy: framework  # X-Forwarded-*ヘッダーを信頼
+
 spring:
   thymeleaf:
     prefix: file:src/main/resources/templates/
